# University-Exercises

./: .gitignore  README.md
Lista01/Codes/: Lista-01-18.py  Lista01-01.py  Lista01-02.py  Lista01-03.py  Lista01-04.py  Lista01-05.py  Lista01-06.py  Lista01-07.py  Lista01-08.py  Lista01-09.py  Lista01-10.py  Lista01-11.py  Lista01-12.py  Lista01-13.py  Lista01-14.py  Lista01-15.py  Lista01-16.py  Lista01-17.py  Lista01-19.py  Lista01-20.py  (+1 more)
Lista05/: Lista05-02.py  Lista05-04.py  Lista05-06.py  Lista05-07.py  Lista05-08.py  Lista05-09.py  Lista05-11.py  Lista05-12.py  Lista05-13.py  Lista05-14.py  Lista05-15.py  Lista05-17.py  Lista05-18.py  Lista05-19.py  Lista05-20.py  lista05-10.py
Lista06/: Lista06-01.py  Lista06-02.py  Lista06-03.py  Lista06-04.py  Lista06-06.py  Lista06-10.py  Lista06-11.py  Lista06-12.py  Lista06-15.py  Lista06-16.py  Lista06-17.py  Lista06-18.py
Lista10/: Lista-10-09.py  Lista10-01.py  Lista10-02.py  Lista10-03.py  Lista10-04.py  Lista10-05.py  Lista10-07.py  Lista10-08.py  Lista10-10.py  Lista10-12.py  Lista10-13.py  Lista10-15.py  Lista10-16.py  Lista10-17.py
Lista12/Codes/: CMakeLists.txt  Lista12-02.c  Lista12-04.c  Lista12-06.c  Lista12-10.c  Lista12-12.c  Lista13-03.c  Lista13-04.c  Lista13-10.c
Lista13/: CMakeLists.txt  Lista13-18.c  Lista13-19.c  Lista13-20.c  uri.c
Lista14/: Lista14-01.c  Lista14-02.c  Lista14-05.c  Lista14-06.c  Lista14-08.c
Lista14/Codes/: CMakeLists.txt  Lista14-01.c  Lista14-02.c  Lista14-03.c  Lista14-04.c  Lista14-07.c  Lista14-09.c
RunCodes/: 4707-Mateus-fibonacci.py  4707-Mateus-multiplo13.py
(+167 files in other folders)
