cmake_minimum_required(VERSION 3.20)
project(C_Projects C)

set(CMAKE_C_STANDARD 99)

add_executable(Lista12-02.c Lista12-02.c)
add_executable(Lista12-04.c Lista12-04.c)
add_executable(Lista12-06.c Lista12-06.c)
add_executable(Lista12-08.c Lista12-08.c)
add_executable(Lista12-10.c Lista12-10.c)
add_executable(Lista12-12.c Lista12-12.c)
add_executable(Lista12-14.c Lista12-14.c)
add_executable(Lista13-01.c Lista13-01.c)
add_executable(Lista13-02.c Lista13-02.c)
add_executable(Lista13-03.c Lista13-03.c)
add_executable(Lista13-04.c Lista13-04.c)
add_executable(Lista13-05.c Lista13-05.c)
add_executable(Lista13-06.c Lista13-06.c)
add_executable(Lista13-07.c Lista13-07.c)
add_executable(Lista13-08.c Lista13-08.c)
add_executable(Lista13-09.c Lista13-09.c)
add_executable(Lista13-10.c Lista13-10.c)
