cmake_minimum_required(VERSION 3.20)
project(Lista14 C)

set(CMAKE_C_STANDARD 99)

add_executable(Lista14-01.c Lista14-01.c)
add_executable(Lista14-02.c Lista14-02.c)
add_executable(Lista14-03.c Lista14-03.c)
add_executable(Lista14-04.c Lista14-04.c)
add_executable(Lista14-05.c Lista14-05.c)
add_executable(Lista14-06.c Lista14-06.c)
add_executable(Lista14-07.c Lista14-07.c)
add_executable(Lista14-08.c Lista14-08.c)
add_executable(Lista14-09.c Lista14-09.c)